# release-test-project

./: .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  COMPLETE_RELEASE_PLEASE_GUIDE.md  Cargo.toml  MANUAL_RELEASE.md  README.md  REDL_RELEASE_PLEASE_FIX.md  RELEASE_PLEASE_SETUP.md  SETUP_RELEASE_PLEASE_PROMPT.md  cliff.toml  install.sh  release-please-config.json  release-plz.toml
.github/workflows/: build-release-binaries.yml  ci.yml  manual-release.yml  release-please.yml  release-plz.yml  release.yml
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: lib.rs
crates/utils/: CHANGELOG.md  Cargo.toml
crates/utils/src/: lib.rs
