[package]
name = "release-test-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for release-test project"

[[bin]]
name = "release-test"
path = "src/main.rs"

[dependencies]
release-test-core = { path = "../core", version = "0.1.0" }
release-test-utils = { path = "../utils", version = "0.1.0" }
anyhow.workspace = true
clap.workspace = true
