[package]
name = "release-test-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for release-test project"

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }