[package]
name = "release-test-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility functions for release-test project"

[dependencies]
release-test-core = { path = "../core", version = "0.1.0" }
serde_json.workspace = true
